Bug 168355 - Page break with page style with page number in table properties is wrong
Summary: Page break with page style with page number in table properties is wrong
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0 target:25.8.2 target:25...
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2025-09-10 18:01 UTC by Mike Kaganski
Modified: 2025-09-15 09:28 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
A page break with page style with page number in table (7.72 KB, application/vnd.oasis.opendocument.text)
2025-09-10 18:01 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2025-09-10 18:01:03 UTC
Created attachment 202782 [details]
A page break with page style with page number in table

The attachment has a paragraph, then a table with a page break with page style with page number 1 (i.e., it should be another page 1). In 25.8, it is page 3 instead.
Comment 1 Regina Henschel 2025-09-10 22:20:47 UTC
As described.

I see the error in Version: 25.2.5.2 (X86_64) / LibreOffice Community
Build ID: 03d19516eb2e1dd5d4ccd751a0d6f35f35e08022
CPU threads: 32; OS: Windows 11 X86_64 (10.0 build 26100); UI render: Skia/Vulkan; VCL: win
Locale: de-DE (de_DE); UI: en-US
Calc: threaded
Comment 2 Mike Kaganski 2025-09-11 05:15:33 UTC
Regression after 7d924018f3ea58050081936bde067391714a8bb5
Comment 3 Commit Notification 2025-09-12 07:47:10 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/46720a15474c6c6cfbbb78ff15b446fbd004120c

tdf#168355 Page break with page style with page number in table

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2025-09-12 10:53:45 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/38f5d984658c42c6d69b658d623bbeb64a94ce23

tdf#168355 Page break with page style with page number in table

It will be available in 25.8.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2025-09-12 16:53:54 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a11d059702b349f2ca520414b73785b127e8837a

Related: tdf#168355 Optimize the fix

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2025-09-15 07:49:01 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/26e4e0393b1cce113a3a20436f77a6eb0ef8b350

Related: tdf#168355 Optimize the fix

It will be available in 25.8.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2025-09-15 09:28:27 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/b021f443eb4216dbfd42c56634a59597b246d667

tdf#168355 Page break with page style with page number in table

It will be available in 25.2.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.