tdf#168355 Page break with page style with page number in table

regression from
    commit 7d924018f3ea58050081936bde067391714a8bb5
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Fri Jul 19 10:44:10 2024 +0200
    don't use GetItemSurrogates in SwFrame::GetVirtPageNum

Change-Id: Ibdc223842013ad11b56f402571f276de38a01f6a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/190814
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>