sw/source/core/layout/trvlfrm.cxx
@@ -1888,11 +1888,35 @@ static const SwFrame* lcl_FindStartOfVirtualPages(const SwPageFrame *pPage)
                     return aHint.GetFrame();
                 }
             }
+            // might have to search tables too, they may set page number in their text flow properties
+            const SwLayoutFrame* pParentFrame = pContentFrame->GetUpper();
+            while (pParentFrame)
+            {
+                if (const SwTabFrame* pTabFrame = pParentFrame->FindTabFrame())
+                    if (const SwTable* pTable = pTabFrame->GetTable())
+                        if (const SwTableFormat* pTableFormat = pTable->GetFrameFormat())
+                        {
+                            const SwFormatPageDesc& rFormatPageDesc2 = pTableFormat->GetPageDesc();
+
+                            if ( rFormatPageDesc2.GetNumOffset() && rFormatPageDesc2.GetDefinedIn() )
+                            {
+                                const sw::BroadcastingModify* pMod = rFormatPageDesc2.GetDefinedIn();
+                                sw::VirtPageNumHint aHint(pPage);
+                                pMod->CallSwClientNotify(aHint);
+                                if(aHint.GetPage())
+                                {
+                                    return aHint.GetFrame();
+                                }
+                            }
+                        }
+                pParentFrame = pParentFrame->GetUpper();
+            }
         }
         pPageFrameIter = static_cast<const SwPageFrame*>(pPageFrameIter->GetPrev());
     }
     return nullptr;
 }
+
 /** @return the virtual page number with the offset. */
 sal_uInt16 SwFrame::GetVirtPageNum() const
 {
